small changes for manuscript

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,5 +1,5 @@
 ---
-title             : "The good person is me: Spontaneous binding with the self prioritizes good character"
+title             : "The good person is me: Spontaneous self-referential process prioritizes the good character"
 shorttitle        : "Priorization of moral character"
 
 author: 
@@ -75,7 +75,7 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
  <!-- What is the theoretic meaning of the series study? -->
 
-Alternative title: Self-relevance modulates the priorization of the good character in perceptual matching
+Alternative title: Self-relevance modulates the prioritization of the good character in perceptual matching
 
 # Introduction
 
@@ -90,7 +90,7 @@ moral associative learning as an stronger predictor??
 -->
 [Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
 
-[Two possibilities about moral character]
+[Two possible effect of moral character prioritization]
 Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people prioritize information with certain moral character? Focus on the valence of moral character, previous studies explore both negativity effect and positivity effect. The negativity effect, i.e., 'bad' character are prioritized, is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001; @pratto_automatic_1991]. A few studies provided evidence for this possibility. For example, @anderson_visual_2011 asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. Similarly, @eiserbeck_visual_2020 combined  associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
 
 The positivity effect, i.e., good moral characters are prioritized, is also plausible [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
@@ -144,7 +144,7 @@ We reported all the measurements, analyses, and results in all the experiments i
 
 All the experiments reported were not pre-registered. Most experiments (1a ~ 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more [@Simmons_2013_life], we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017 (See Table S1 for overview of these experiments). 
 
-All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University. 
+All participants received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University. 
 
  <!-- 21-word solution (Simmons, Nelson & Simonsohn, 2012; retrieved from http://ssrn.com/abstract=2160588) -->
 
@@ -913,7 +913,7 @@ df_rt1_diff_hdi <- df_m1_plot_rt_diff %>%
 
   <!-- plot all graphs form the first part together -->
   
-```{r plot-bayes-meta-1, fig.cap="Effect of moral valence on RT and d'", fig.height=9, fig.width=15, warning=FALSE}
+```{r plot-bayes-meta-1, fig.cap="Effect of moral character on RT and d'", fig.height=9, fig.width=15, warning=FALSE}
 library(patchwork)
 p_rt1 + p_dprime1 +
         p_rt1_diff + p_dprime1_diff + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 2, byrow = TRUE, guides = 'collect')
@@ -1605,7 +1605,7 @@ df_ms_rt1_diff_id <- df_ms_m1_plot_rt_diff %>%
                                        centrality = "median")
 ```
 
-```{r plot-bayes2, fig.cap="Interaction between moral valence and self-referential", fig.height=12, fig.width=15, warning=FALSE}
+```{r plot-bayes2, fig.cap="Interaction between moral character and self-referential", fig.height=12, fig.width=15, warning=FALSE}
 library(patchwork)
 # (p_rt1 | p_dprime1)
 p_ms_rt1 + p_ms_dprime1 +
@@ -2317,14 +2317,14 @@ p3 <- (p_exp4b_rt1 + exp4b_sdt_p ) + plot_layout(nrow = 1, guides = "collect")
 p4 <- (p_exp4b_rt_diff_id + p_exp4b_dprime1_diff_id) + plot_layout(nrow = 1, byrow = FALSE, guides = "collect") 
 ```
 
-```{r plot-exp4-all, fig.cap="exp4: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=15, warning=FALSE}
+```{r plot-exp4-all, fig.cap="Experiment 4: Implicit binding between good character and the self.",  fig.height=9, fig.width=15, warning=FALSE}
 library(patchwork)
 
 design <- "
   1234
   5678
 "
-p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_exp4a_dprime1_diff_val + p_exp4b_rt_diff_id + p_exp4b_dprime1_diff_id  + plot_layout(design = design, guides = "collect")
+p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_exp4a_dprime1_diff_val + p_exp4b_rt_diff_id + p_exp4b_dprime1_diff_id + plot_annotation(tag_levels = 'A') + plot_layout(design = design, guides = "collect")
 
 # ((p1 +plot_layout(guides = "collect")) + p3 + plot_layout(guides = "collect")) + plot_layout(ncol = 3, widths = c(1, 1, 4), guides = 'keep')
 # 
@@ -2344,16 +2344,16 @@ Most importantly, we found evidence that task-irrelevant self-referential proces
 The same trend appeared for the RT data. For shapes associated with good person, with a "self" inside the shape reduced the reaction times as compared with when a "other" inside the shape ($mean_{diff}$ = -55 ms, 95% HDI [-75, -35]), but this effect did not occur when the shapes were associated neutral ($mean_{diff}$ = 10, 95% HDI [1, 20]) or bad ($mean_{diff}$ = 5, 95% HDI [-16, 27]) person. See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
-[Summary of results] Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
+[Summary of results] Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Moreover, the prioritization of good character was not driven by valence itself, i.e., "good" vs "bad". Instead, this effect was modulated by a self-referential processing: prioritization only occurred when moral characters are self-referential (experiments ...). Finally, the prioritization of good character was modulated by self-referential information even when either the self- or character- related information was irrelevant to experimental task (experiment 4a and 4b). In contrast, when good character became other-referential, even implicitly, the performance was worse thant other-referential neutral character. Together, these findings highlight the importance of the self in perceiving more character information, contribute to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people prioritize socially salient stimuli.
 
-[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual processes. Previous research reported the effect of moral perception but the mechanism is disputed. For example, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect [@stein_no_2017]. Another studies by [@gantman_moral_2014] found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming [@firestone_cognition_2015; @jussim_interpretations_2016] or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
+[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the effect of moral character on perceptual decision-making. Previous research reported the effect of morality on perception but the results and the mechanisms were disputed. For example, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect [@stein_no_2017]. Another studies by @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. In the current study, we used associative learning task which allow us to eliminate the semantic priming: (1) we only use a few pairs of stimuli; (2) the stimuli that used to represent moral character are neutral stimuli. Moreover, the moral character information can be learned by typical moral behavioral instead of moral character label. The effect was replicated in all five different samples further confirmed that the prioritization effect of good character found in our paradigm is robust.
 
-The prioritization of good character, however, demonstrated a different direction from previous moral perception studies. Previous moral perception research usually reported a negativity effect, i.e., information related to bad moral character are processed better [@anderson_visual_2011; @eiserbeck_visual_2020]. For instance, @anderson_visual_2011 reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well [@pool_attentional_2016].
+The prioritization of good character, however, is different previous moral perception studies which reported a negativity effect, i.e., information related to bad moral character are processed better [@anderson_visual_2011; @eiserbeck_visual_2020]. For instance, @anderson_visual_2011 reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well [@pool_attentional_2016].
 
-[Self-binding as a novel explanation and consistent with broader theory about morality] We further tested whether prioritization effect of moral character was due to purely positive valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view [], suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level. 
+[Self-binding as a novel explanation and consistent with broader theory about morality] We further tested whether prioritization effect of moral character was due to purely valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view [@freitas_origins_2017; @strohminger_true_2017], suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level. 
 
 [Beyond the debate about penetration of perception] 
-Instead of claiming the moral-self motivation *penetrates* perception, we suggest that perceptual decision-making process include more processes than just perception, if we define perception narrowly as encoding of the sensory information. In other words, we are not interested in against or for one side of the cognition-penetration debate [@firestone_bbs_2016]. Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory []. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self [] or good self [@Hu_2020_GoodSelf]. Meanwhile, reinforcement learning models also revealed that learning rate [@lockwood_nat_comm_2018]
+Instead of claiming the moral-self motivation *penetrates* perception, we argue that perceptual decision-making process include more processes than just encoding the sensory inputs. In other words, we are not against or for one side of the cognition-penetration debate [@firestone_bbs_2016]. Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory []. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_GoodSelf]. Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate [@lockwood_nat_comm_2018]. These studies suggest that more specified computational models are need to disentangle the cognitive processes underlying the prioritization of good character.
 
 # References
 ```{r create_r-references, echo=FALSE,results='hide'}
