--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -175,14 +175,14 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The good person is me: Spontaneous binding with the self prioritizes good character},
+  pdftitle={The good person is me: Spontaneous self-referential process prioritizes the good character},
   pdfauthor={Hu Chuan-Peng1, 2, Kaiping Peng2, \& Jie Sui3},
   pdflang={en-EN},
   pdfkeywords={Perceptual decision-making, Self positivity bias, moral character},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{The good person is me: Spontaneous binding with the self prioritizes good character}
+\title{The good person is me: Spontaneous self-referential process prioritizes the good character}
 \author{Hu Chuan-Peng\textsuperscript{1, 2}, Kaiping Peng\textsuperscript{2}, \& Jie Sui\textsuperscript{3}}
 \date{}
 
@@ -211,7 +211,7 @@ Moral character is central to social evaluation and moral judgment. As such, inf
 \begin{document}
 \maketitle
 
-Alternative title: Self-relevance modulates the priorization of the good character in perceptual matching
+Alternative title: Self-relevance modulates the prioritization of the good character in perceptual matching
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
@@ -220,7 +220,7 @@ Alternative title: Self-relevance modulates the priorization of the good charact
 
 {[}Morality is central to social life, moral character is the central of morality{]} \textbf{People experience a substantial amount of moral events in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014) and judging the moral character of people is indispensable part of these events}. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as ``right'' or ``wrong'', and by doing so, we judge people as ``good'' or ``bad'' (Uhlmann, Pizarro, \& Diermeier, 2015). Moral character is so important in social life that it is a basic dimension in our social evaluation (Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014) and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) (e.g., Dunbar, 2004). These moral character information may help us to evaluate our in-group members and distinguish out-group members (Ellemers, 2018).
 
-{[}Two possibilities about moral character{]}
+{[}Two possible effect of moral character prioritization{]}
 Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people prioritize information with certain moral character? Focus on the valence of moral character, previous studies explore both negativity effect and positivity effect. The negativity effect, i.e., `bad' character are prioritized, is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression (N. H. Anderson, 1965; Fiske, 1980; Skowronski \& Carlston, 1987). This idea also seemed to consistent with the more general idea that ``bad is stronger than good'' (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001; Pratto \& John, 1991). A few studies provided evidence for this possibility. For example, E. Anderson, Siegel, Bliss-Moreau, and Barrett (2011) asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors (but see Stein, Grubb, Bertrand, Suh, \& Verosky, 2017). Similarly, Eiserbeck and Abdel Rahman (2020) combined associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially.
 
 The positivity effect, i.e., good moral characters are prioritized, is also plausible (see recent reviews, Pool, Brosch, Delplanque, \& Sander, 2016; Unkelbach, Alves, \& Koch, 2020). Unkelbach et al. (2020) pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words (Bargh, Chaiken, Govender, \& Pratto, 1992). Similarly, in a lexical decision task, participants judge positive words faster than negative words (Unkelbach et al., 2010). Also, Anisfeld and Lambert (1966) found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) (Anselmi, Vianello, \& Robusto, 2011). Direct evidence for positivity effect of moral character also exist: Shore and Heerey (2013) found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
@@ -236,7 +236,7 @@ We reported all the measurements, analyses, and results in all the experiments i
 
 All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017 (See Table S1 for overview of these experiments).
 
-All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University.
+All participants received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University.
 
 \hypertarget{general-methods}{%
 \section{General methods}\label{general-methods}}
@@ -386,7 +386,7 @@ In this part, we report results from five experiments that tested whether an ass
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes-meta-1-1.pdf}
-\caption{\label{fig:plot-bayes-meta-1}Effect of moral valence on RT and d'}
+\caption{\label{fig:plot-bayes-meta-1}Effect of moral character on RT and d'}
 \end{figure}
 
 For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person'', ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (median = 2.49, 95\% HDI = {[}2.19 2.75{]}) than shapes associated with neutral character (median = 2.18, 95\% HDI = {[}1.90 2.48{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.02 0.63{]} , but we did not find differences between shapes associated with bad character (median = 2.23, 95\% HDI = {[}1.94 2.53{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.29 0.37{]}.
@@ -405,7 +405,7 @@ Because we have found that a facilitation effect of good character and slow-down
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes2-1.pdf}
-\caption{\label{fig:plot-bayes2}Interaction between moral valence and self-referential}
+\caption{\label{fig:plot-bayes2}Interaction between moral character and self-referential}
 \end{figure}
 
 For the \emph{d} prime, we found that an interaction between moral character effect and self-referential, the self- and other-referential difference was greater than zero for good vs.~neutral character differences (\(median_{diff}\) = 0.51; 95\% HDI = {[}-1.48 2.61{]}) but not for bad vs.~neutral differences (\(median_{diff}\) = -0.02; 95\% HDI = {[}-1.85 2.17{]}). Further analyses revealed that the good vs.~neutral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.56; 95\% HDI = {[}-1.05 2.15{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
@@ -428,7 +428,7 @@ The same pattern was found for RTs. For self-referential condition, when good ch
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4-all-1.pdf}
-\caption{\label{fig:plot-exp4-all}exp4: Results of Bayesian GLM analysis.}
+\caption{\label{fig:plot-exp4-all}Experiment 4: Implicit binding between good character and the self.}
 \end{figure}
 
 In experiment 4b, moral character was the task-relevant factor, and we found that there were main effect of moral character: shapes associated with good character were performed better than other-related conditions, on both \emph{d'} and reaction times.
@@ -440,16 +440,16 @@ The same trend appeared for the RT data. For shapes associated with good person,
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-{[}Summary of results{]} Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
+{[}Summary of results{]} Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Moreover, the prioritization of good character was not driven by valence itself, i.e., ``good'' vs ``bad''. Instead, this effect was modulated by a self-referential processing: prioritization only occurred when moral characters are self-referential (experiments \ldots). Finally, the prioritization of good character was modulated by self-referential information even when either the self- or character- related information was irrelevant to experimental task (experiment 4a and 4b). In contrast, when good character became other-referential, even implicitly, the performance was worse thant other-referential neutral character. Together, these findings highlight the importance of the self in perceiving more character information, contribute to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people prioritize socially salient stimuli.
 
-{[}Effect of good character{]} The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual processes. Previous research reported the effect of moral perception but the mechanism is disputed. For example, (E. Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect (Stein et al., 2017). Another studies by (Gantman \& Van Bavel, 2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming (Firestone \& Scholl, 2015; Jussim et al., 2016) or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
+{[}Effect of good character{]} The robust effect of the prioritization of good character provide solid evidence for the effect of moral character on perceptual decision-making. Previous research reported the effect of morality on perception but the results and the mechanisms were disputed. For example, (E. Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect (Stein et al., 2017). Another studies by Gantman and Van Bavel (2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). In the current study, we used associative learning task which allow us to eliminate the semantic priming: (1) we only use a few pairs of stimuli; (2) the stimuli that used to represent moral character are neutral stimuli. Moreover, the moral character information can be learned by typical moral behavioral instead of moral character label. The effect was replicated in all five different samples further confirmed that the prioritization effect of good character found in our paradigm is robust.
 
-The prioritization of good character, however, demonstrated a different direction from previous moral perception studies. Previous moral perception research usually reported a negativity effect, i.e., information related to bad moral character are processed better (E. Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). For instance, E. Anderson et al. (2011) reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well (Pool et al., 2016).
+The prioritization of good character, however, is different previous moral perception studies which reported a negativity effect, i.e., information related to bad moral character are processed better (E. Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). For instance, E. Anderson et al. (2011) reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well (Pool et al., 2016).
 
-{[}Self-binding as a novel explanation and consistent with broader theory about morality{]} We further tested whether prioritization effect of moral character was due to purely positive valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view {[}{]}, suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level.
+{[}Self-binding as a novel explanation and consistent with broader theory about morality{]} We further tested whether prioritization effect of moral character was due to purely valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger et al., 2017), suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level.
 
 {[}Beyond the debate about penetration of perception{]}
-Instead of claiming the moral-self motivation \emph{penetrates} perception, we suggest that perceptual decision-making process include more processes than just perception, if we define perception narrowly as encoding of the sensory information. In other words, we are not interested in against or for one side of the cognition-penetration debate (Firestone \& Scholl, 2016). Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made (Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory {[}{]}. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self {[}{]} or good self (Hu et al., 2020). Meanwhile, reinforcement learning models also revealed that learning rate (Lockwood et al., 2018)
+Instead of claiming the moral-self motivation \emph{penetrates} perception, we argue that perceptual decision-making process include more processes than just encoding the sensory inputs. In other words, we are not against or for one side of the cognition-penetration debate (Firestone \& Scholl, 2016). Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made (Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory {[}{]}. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self (Golubickis et al., 2017) or good self (Hu et al., 2020). Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate (Lockwood et al., 2018). These studies suggest that more specified computational models are need to disentangle the cognitive processes underlying the prioritization of good character.
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -505,11 +505,17 @@ Forstmann, B. U., Ratcliff, R., \& Wagenmakers, E.-J. (2016). Sequential {Sampli
 \leavevmode\vadjust pre{\hypertarget{ref-freeman_chapter_2020}{}}%
 Freeman, J. B., Stolier, R. M., \& Brooks, J. A. (2020). Chapter five - dynamic interactive theory as a domain-general account of social perception. In B. Gawronski (Ed.), \emph{Advances in experimental social psychology} (Vol. 61, pp. 237--287). Academic Press. \url{https://doi.org/10.1016/bs.aesp.2019.09.005}
 
+\leavevmode\vadjust pre{\hypertarget{ref-freitas_origins_2017}{}}%
+Freitas, J. D., Cikara, M., Grossmann, I., \& Schlegel, R. (2017). Origins of the belief in good true selves. \emph{Trends in Cognitive Sciences}, \emph{21}(9), 634--636. \url{https://doi.org/10.1016/j.tics.2017.05.009}
+
 \leavevmode\vadjust pre{\hypertarget{ref-gantman_moral_2014}{}}%
 Gantman, A. P., \& Van Bavel, J. J. (2014). The moral pop-out effect: Enhanced perceptual awareness of morally relevant stimuli. \emph{Cognition}, \emph{132}(1), 22--29. \url{https://doi.org/10.1016/j.cognition.2014.02.007}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Goh_2016_mini}{}}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how {[}Journal Article{]}. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. \url{https://doi.org/10.1111/spc3.12267}
+
+\leavevmode\vadjust pre{\hypertarget{ref-golubickis_self-prioritization_2017}{}}%
+Golubickis, M., Falben, J. K., Sahraie, A., Visokomogilski, A., Cunningham, W. A., Sui, J., \& Macrae, C. N. (2017). Self-prioritization and perceptual matching: The effects of temporal construal. \emph{Memory \& Cognition}, \emph{45}(7), 1223--1239. \url{https://doi.org/10.3758/s13421-017-0722-3}
 
 \leavevmode\vadjust pre{\hypertarget{ref-goodwin_moral_2015}{}}%
 Goodwin, G. P. (2015). Moral character in person perception. \emph{Current Directions in Psychological Science}, \emph{24}(1), 38--44. \url{https://doi.org/10.1177/0963721414550709}
