--- a/endnote.bib
+++ b/endnote.bib
@@ -903,7 +903,7 @@ _mad_2020,
 	issn = {2041-1723},
 	url = {https://www.nature.com/articles/s41467-020-15602-4},
 	doi = {10.1038/s41467-020-15602-4},
-	abstract = {People often prioritize their own interests, but also like to see themselves as moral. How do individuals resolve this tension? One way to both pursue personal gain and preserve a moral self-image is to misremember the extent of oneâs selfishness. Here, we test this possibility. Across five experiments (N=), we find that people tend to recall being more generous in the past than they actually were, even when they are incentivized to recall their decisions accurately. Crucially, this motivated misremembering effect occurs chiefly for individuals whose choices violate their own fairness standards, irrespective of how high or low those standards are. Moreover, this effect disappears under conditions where people no longer perceive themselves as responsible for their fairness violations. Together, these findings suggest that when peopleâs actions fall short of their personal standards, they may misremember the extent of their selfishness, thereby potentially warding off threats to their moral self-image.},
+	abstract = {People often prioritize their own interests, but also like to see themselves as moral. How do individuals resolve this tension? One way to both pursue personal gain and preserve a moral self-image is to misremember the extent of one's selfishness. Here, we test this possibility. Across five experiments (N=), we find that people tend to recall being more generous in the past than they actually were, even when they are incentivized to recall their decisions accurately. Crucially, this motivated misremembering effect occurs chiefly for individuals whose choices violate their own fairness standards, irrespective of how high or low those standards are. Moreover, this effect disappears under conditions where people no longer perceive themselves as responsible for their fairness violations. Together, these findings suggest that when people's actions fall short of their personal standards, they may misremember the extent of their selfishness, thereby potentially warding off threats to their moral self-image.},
 	pages = {2100},
 	number = {1},
 	journaltitle = {Nature Communications},
@@ -1403,7 +1403,7 @@ Publisher: American Psychological Association},
 	title = {Morality and social identity},
 	isbn = {978-0-19-024757-7},
 	series = {Oxford library of psychology},
-	abstract = {Moral norms and values are key features of human essence, that provide the standards against which behavior is evaluated. Some moral norms and values are universally endorsed (e.g., âdo no harmâ), others can be more specific (e.g., âeat no meatâ). Professional, cultural or religious groups and communities often define their own unique system of moral norms that true group members are expected to adhere to. These are used to identify âproperâ group members, regulate the behavior of individuals, and sanction those who transgress them. This is functional to the extent that such guidelines help provide groups and their members with a unique and distinct social identity. Yet they can also constitute a source of social tension and intergroup conflict. This hallmark feature of human morality represents an important challenge to contemporary societies. ({PsycINFO} Database Record (c) 2018 {APA}, all rights reserved)},
+	abstract = {Moral norms and values are key features of human essence, that provide the standards against which behavior is evaluated. Some moral norms and values are universally endorsed (e.g., "do no harm"), others can be more specific (e.g., "eat no meat"). Professional, cultural or religious groups and communities often define their own unique system of moral norms that true group members are expected to adhere to. These are used to identify "proper" group members, regulate the behavior of individuals, and sanction those who transgress them. This is functional to the extent that such guidelines help provide groups and their members with a unique and distinct social identity. Yet they can also constitute a source of social tension and intergroup conflict. This hallmark feature of human morality represents an important challenge to contemporary societies. ({PsycINFO} Database Record (c) 2018 {APA}, all rights reserved)},
 	pages = {147--158},
 	booktitle = {The Oxford handbook of the human essence},
 	publisher = {Oxford University Press},
